--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 principal{
     background-color:navy;
 }
+#imagem-nasa{
+    width: 100px;
+    border: solid 3px grey;
+}
+
+.rodape{
+    background-color: cyan;
+    color: black;
+    text-align: center;
+}
