--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 principal{
     background-color:navy;
 }
-#imagem-nasa{
-    width: 100px;
+#imagem{
+    width: 50px;
     border: solid 3px grey;
 }
 
