--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     color:color(from color srgb r g b);
     text-decoration: none;
 }
+#link:hover{
+    font-size: 25px;
+    color:brown;
+    text-decoration:underline;
+}
 .principal{
     background-color:rgb(0, 0, 138);
     color: black;
