--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,13 @@
+#link{
+    font-size: 20px;
+    color:color(from color srgb r g b);
+    text-decoration: none;
+}
+#link:hover{
+    font-size: 25px;
+    color:brown;
+    text-decoration:underline;
+}
 .cabecalho{
     background-color: black;
     border: 10px;
